k8s/production/namespace-and-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sparkapply-prod
  labels:
    name: sparkapply-prod
    environment: production
